Ultima entrega del proyecto final

--- a/CSS/_variables.scss
+++ b/CSS/_variables.scss
@@ -1,5 +1,6 @@
 $color-primario:#eccfd3;
-$color-secundario:#cfe1eb;
-$color-terciario:#cfebd9;
-$color-terciario-ligero:#effff4;
+$color-secundario:#F08B99;
+$color-terciario:#B74046;
+$color-terciario-fuerte:#99272d;
+$color-terciario-ligero:#fce8e9;
 $break-points:("cellphone":480px, "tablet":768px, "desktop":1280px)
