--- a/CSS/_index.scss
+++ b/CSS/_index.scss
@@ -3,32 +3,46 @@
 }
 
 body{
-  background-color: #ECCFD3;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='369' height='369' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23CFE1EB' stroke-width='2'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23CFEBD9'%3E%3Ccircle cx='769' cy='229' r='6'/%3E%3Ccircle cx='539' cy='269' r='6'/%3E%3Ccircle cx='603' cy='493' r='6'/%3E%3Ccircle cx='731' cy='737' r='6'/%3E%3Ccircle cx='520' cy='660' r='6'/%3E%3Ccircle cx='309' cy='538' r='6'/%3E%3Ccircle cx='295' cy='764' r='6'/%3E%3Ccircle cx='40' cy='599' r='6'/%3E%3Ccircle cx='102' cy='382' r='6'/%3E%3Ccircle cx='127' cy='80' r='6'/%3E%3Ccircle cx='370' cy='105' r='6'/%3E%3Ccircle cx='578' cy='42' r='6'/%3E%3Ccircle cx='237' cy='261' r='6'/%3E%3Ccircle cx='390' cy='382' r='6'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: $color-primario;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1200 800'%3E%3Cdefs%3E%3CradialGradient id='a' cx='0' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23d2878e'/%3E%3Cstop offset='1' stop-color='%23d2878e' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='b' cx='1200' cy='800' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ebb0b8'/%3E%3Cstop offset='1' stop-color='%23ebb0b8' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='c' cx='600' cy='0' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23da5f6a'/%3E%3Cstop offset='1' stop-color='%23da5f6a' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='d' cx='600' cy='800' r='600' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23ECCFD3'/%3E%3Cstop offset='1' stop-color='%23ECCFD3' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='e' cx='0' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23B74046'/%3E%3Cstop offset='1' stop-color='%23B74046' stop-opacity='0'/%3E%3C/radialGradient%3E%3CradialGradient id='f' cx='1200' cy='0' r='800' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23F08B99'/%3E%3Cstop offset='1' stop-color='%23F08B99' stop-opacity='0'/%3E%3C/radialGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='1200' height='800'/%3E%3Crect fill='url(%23b)' width='1200' height='800'/%3E%3Crect fill='url(%23c)' width='1200' height='800'/%3E%3Crect fill='url(%23d)' width='1200' height='800'/%3E%3Crect fill='url(%23e)' width='1200' height='800'/%3E%3Crect fill='url(%23f)' width='1200' height='800'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
   min-height:100vh;  
+  max-width: 100vw;
+  overflow-x: hidden;
+  position: relative;
+}
+html{
+  overflow-x: hidden;
 }
 
-/*Nav bar*/
+/*Navbar*/
 #navbar{
   &, #nav-inicio{
     animation: slide-in-top 0.4s both;
     background-color: $color-terciario-ligero;
+    border-bottom: 2px solid $color-terciario;
   }
-  &-logo{
+  &--logo{
     transition: transform .5s;
     &:hover{
       transition: transform .5s;
       transform:scale(1.2);
     }
   }
-  &-link{
+  &--link{
     transition: transform .5s;
     &:hover{
       transition: transform .5s;
       transform:scale(1.2);
     }
+    &--seleccionado{
+      color: $color-terciario-fuerte;
+      text-decoration: underline;
+      text-underline-offset:5px;
+    }
   }
-  &Dropdown{
+  &--dropdown{
     transition: transform .5s;
     &:hover{
       transition: transform .5s;
@@ -39,6 +53,7 @@ body{
 .dropdown-menu{
   background-color: $color-terciario-ligero;
 }
+/*Fin navbar*/
 
 /*Logo de whatsapp*/
 #wpp{
@@ -52,6 +67,7 @@ body{
     transform: scale(1.2)
   }
 }
+/*Fin wpp*/
 
 /*Titulos*/
 #titulo{
@@ -60,12 +76,7 @@ body{
   margin-top: 20vh;
   margin-bottom: 5vh;
 }
-
-@media (max-width: map-get($break-points,"cellphone")){
-  #titulo{
-    margin: 5vh;
-  }
-}
+/*Fin titulos*/
 
 /*Galeria*/
 #fotos-galeria{
@@ -83,7 +94,7 @@ body{
     transform: scale(1.2)
   }
 }
-
+/*Fin galeria*/
 
 /*Productos*/
 .nombre{
@@ -97,19 +108,47 @@ body{
   font-weight: map-get($font-weights, "thin" );
 }
 
-#fondo-producto{
-  position:absolute;
-  height: 100%;
-  width: 100%;
-  transition: background-color .8s;
-  &:hover{
+#productos{
+  &--item{
+    & .card{
+      border: 3px solid $color-terciario;
+    }
+    & .card-body{
+      background-color: $color-terciario-ligero;
+      min-height: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+  &--button{
+    z-index: 2;
+    position:relative;
+    color: white;
+    background-color: $color-terciario;
     transition: background-color .8s;
-    background-color: rgba(0, 0, 0, 0.2);
+    &:hover{
+      transition: background-color .8s;
+      background-color:$color-terciario-fuerte;
+    }
+  }
+  &--fondo{
+    z-index: 1;
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    transition: background-color .8s;
+    &:hover{
+      transition: background-color .8s;
+      background-color: rgba(0, 0, 0, 0.2);
+    }
   }
 }
+/*Fin productos*/
 
 /*FAQS*/
 #faqs{
+  margin: auto 5%;
   background-color: $color-terciario;
   &--title{
     @include texto-importante;
@@ -119,6 +158,7 @@ body{
     @extend .descripcion;
   }
 }
+
 .accordion-item{
   background-color: $color-terciario-ligero;
 }
@@ -128,31 +168,76 @@ body{
     background-color: $color-terciario;
   }
 }
+/*Fin FAQS*/
 
 /*Contacto*/
+#contacto{
+  margin: auto 5%;
+  &--title{
+    @include texto;
+  }
+  &--button{
+    @include texto;
+    color: white;
+    background-color: $color-terciario;
+    transition: background-color .8s;
+    &:hover{
+      transition: background-color .8s;
+      background-color:$color-terciario-fuerte;
+    }
+  }
+}
 .form-control{
   background-color: $color-terciario-ligero;
 }
-.form-label{
-  @include texto;
+.accordion-button:not(.collapsed)::after {
+  background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%74060629'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  transform: rotate(-180deg);
 }
+/*Fin contacto*/
 
-/*FOOTER*/
+/*Footers*/
+#prefooter{
+  text-align: center;
+  margin: 30px 0;
+  &--title{
+    @include texto-importante;
+    font-size: 1em
+  }
+  &--description{
+    @include texto;
+    font-size: .7em;
+  }
+}
 #footer{
   background-color: rgba(0, 0, 0, 0.1);  
 }
+/*Fin footers*/
 
+/*Index*/
 #inicio{
-  & #producto{
+  & .card{
+    border: 3px solid $color-terciario;
+    border-radius: 8px;
+  }
+  &--producto{
     transition: transform .8s;
     &:hover{
       transition: .5s;
       transform: scale(1.05);
     }
   }
-  & .nombre{
+  &--nombre{
+    @include texto-importante;
     white-space: nowrap;
     overflow: hidden;
     text-overflow:ellipsis;
+    font-size: 1em;
+  }
+  &--imagen{
+    padding: 5%;
+    box-sizing: border-box;
+    width: 90vw;
   }
 }
+/*Fin index*/
